--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,7 @@ body {
   place-items: center;
   justify-content: center; 
   align-items: center; 
-  flex-direction: column; 
+  flex-direction: row; 
   min-width: 320px;
   min-height: 100vh;
 }
@@ -74,20 +74,22 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 5px 10px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-top: 10px;
 }
 button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
+  border-color: #646cff;
 }
 
 @media (prefers-color-scheme: light) {
@@ -121,4 +123,23 @@ html, body {
 
 #clearButton{
   margin-top: 10px;
+}
+
+#canvasContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+#buttonContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 10px; 
+  margin-top: 10px;
+}
+
+.selectedTool {
+  background-color: #007bff;
+  color: white;
 }
