--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,10 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+  background: url("images/draw.png") no-repeat left center;
+  background-size: 25%;
+  background-position: 150px 250px;
   background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
